<resources>
    <string name="app_name">NeRecipe</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="serving_place">The variant of serving</string>
    <string name="show_menu">Menu</string>
    <string name="remove">remove</string>
    <string name="edit">edit</string>
    <string name="like_button">Toggle to add to favorites</string>
    <string name="category_button">Choose category:</string>
    <string name="save_button">SAVE</string>
    <string name="decline_button">DECLINE</string>
    <string name="accept_button">ACCEPT</string>
    <string name="forgot_button">Forgot yor password?</string>
    <string name="logon_button">LOGON</string>
    <string name="register_button">REGISTER</string>
    <string name="filter_button">choose category to show</string>
    <string name="new_recipe_button">create new recipe</string>
    <string name="show_favorites_button">Favorites</string>
    <string name="enter_stage">Enter stage of cooking</string>
    <string name="new_image">Click to upload new image</string>

    <string name="enter_name">Enter the name of recipe:</string>
    <string name="add_stage_button">Add stage of cooking:</string>

    <string name="user_name_edit">Enter name (nickname, alias)</string>
    <string name="email_edit">Enter email</string>
    <string name="password_edit">Enter password</string>


    <string name="swipe_stages">Swipe stage</string>
    <string name="swipe_left">left to edit</string>
    <string name="swipe_right">right to delete</string>
    <string name="swipe_vertical">Up/down to change position</string>

    <!--Categories -->
    <string name="europian">Europian</string>
    <string name="asian">Asian</string>
    <string name="panasian">Pan-asian</string>
    <string name="eastern">Eastern</string>
    <string name="american">American</string>
    <string name="russian">Russian</string>
    <string name="mediterranian">Mediterranean</string>

    <string name="lorem_ipsum">
        First line.\n\n
        Second line.
    </string>
</resources>