<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowRecipeFull">

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/icon_button_min_size"
        android:inputType="textPersonName"
        android:hint="@string/user_name_edit"
        />

    <EditText
        android:id="@+id/user_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_input"
        android:layout_margin="@dimen/icon_button_min_size"
        android:inputType="textEmailAddress"
        android:hint="@string/email_edit"
        />

    <EditText
        android:id="@+id/user_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_input"
        android:layout_margin="@dimen/icon_button_min_size"
        android:inputType="textPassword"
        android:hint="@string/password_edit"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept_button"
        style="@style/Widget.AppTheme.FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_button_min_size"
        android:contentDescription="@string/accept_button"
        android:text="@string/accept_button"
        app:layout_constraintTop_toBottomOf="@id/user_password_input"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logon_button"
        style="@style/Widget.AppTheme.FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_button_min_size"
        android:contentDescription="@string/logon_button"
        android:text="@string/logon_button"
        app:layout_constraintTop_toBottomOf="@id/user_password_input"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_button"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_button_min_size"
        android:contentDescription="@string/forgot_button"
        android:text="@string/forgot_button"
        app:layout_constraintTop_toBottomOf="@id/user_password_input"
        app:layout_constraintStart_toEndOf="@id/accept_button" />
</androidx.constraintlayout.widget.ConstraintLayout>