<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/recipe_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/md_sys_color_background"
        android:textCursorDrawable="@null"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_spacing"
        app:layout_constraintEnd_toStartOf="@id/filter_button"
        android:outlineSpotShadowColor="@color/md_sys_color_tertiary"
        android:elevation="@dimen/elevation"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter_button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_spacing"
        app:iconGravity="textEnd"
        android:checkable="true"
        app:icon="@drawable/ic_filter_24dp"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/recipe_search"
        app:layout_constraintBottom_toTopOf="@id/new_recipe"
        android:layout_margin="@dimen/very_small_spacing"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_wrapBehaviorInParent="vertical_only"
            tools:listitem="@layout/recipe_short"

            />
    </ScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/new_recipe_button"
        app:srcCompat="@drawable/ic_baseline_add_circle_outline_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/icon_button_min_size"
        app:fabSize="mini"
        style="@style/Widget.AppTheme.FAButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/show_favorites_button"
        app:icon="@drawable/ic_favorite_24dp"
        android:checkable="true"
        android:text="@string/show_favorites_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/icon_button_min_size"
        style="@style/Widget.AppTheme.FAButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>