<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".ShowRecipeFull">



    <ImageView
        android:id="@+id/serving_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/serving_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/pancaces_foreground" />

    <TextView
        android:id="@+id/recipe_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintBottom_toTopOf="@id/author_text_view"
        app:layout_constraintStart_toEndOf="@id/serving_view"
        app:layout_constraintTop_toTopOf="@id/serving_view"
        tools:text="@sample/recipes.json/recipes/name" />

    <TextView
        android:id="@+id/author_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintBottom_toBottomOf="@id/serving_view"
        app:layout_constraintStart_toEndOf="@id/serving_view"
        app:layout_constraintTop_toBottomOf="@id/recipe_name_view"
        tools:text="@sample/recipes.json/users/userName" />

    <TextView
        android:id="@+id/category_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:textSize="@dimen/common_text_size"
        android:textColor="@color/md_sys_color_tertiary"
        app:layout_constraintStart_toEndOf="@id/serving_view"
        app:layout_constraintTop_toBottomOf="@id/author_text_view"
        tools:text="@sample/recipes.json/recipes/categoryId" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/serving_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/common_spacing"
        app:constraint_referenced_ids="author_text_view,recipe_name_view,category_view" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_button"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/show_menu"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_more_vert_24" />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        android:visibility="visible"
        app:icon="@drawable/ic_favorite_24dp"
        app:layout_constraintStart_toEndOf="@id/serving_barrier"
        tools:checked="true"
        tools:text="@sample/recipes.json/recipes/likesCount" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/short_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="serving_view,category_view"/>
    <ListView
        android:id="@+id/stages_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/short_barrier"
        android:layout_marginTop="@dimen/small_spacing"
        tools:listitem="@sample/recipes.json/recipes/stages"
        />


</androidx.constraintlayout.widget.ConstraintLayout>